ok yeah i'm going to eat dinner now

--- a/index.html
+++ b/index.html
@@ -53,36 +53,41 @@
                         </div>
                     </div>
                 </section>
+                <!-- EXPLORE EPISODE -->
                 <section class="row explore-episode justify-content-between">
-                    <div class="col-1"></div>
-                    <figure class="col-2">
-                        <a href="#"><img src="media/explore-1.jpg"/></a>
-                        <figcaption>
-                        <h1><a href="#">Inside the Episode</a></h1>
-                        <p>Series creators D.B. Weiss and David Benioff examine Jaime's decision.</p>
-                        </figcaption>
-                    </figure>
-                    <figure class="col-2">
-                        <a href="#"><img src="media/explore-2.jpg"/></a>
-                        <figcaption>
-                        <h1><a href="#">Worlds Collide</a></h1>
-                        <p>The cast and crew take you inside the dragonpit.</p>
-                        </figcaption>
-                    </figure>
-                    <figure class="col-2">
-                        <a href="#"><img src="media/explore-3.jpg"/></a>
-                        <figcaption>
-                        <h1><a href="#">A Union of Ice and Fire</a></h1>
-                        <p>The cast discusses Jon and Daenerys' connection.</p>
-                        </figcaption>
-                    </figure>
-                    <figure class="col-2">
-                        <a href="#"><img src="media/explore-4.jpg"/></a>
-                        <figcaption>
-                        <h1><a href="#">Don't Miss a Moment</a></h1>
-                        <p>Stream every episode on HBO NOW.</p>
-                        </figcaption>
-                    </figure>
+                    <div class="container-fluid">
+                        <div class="col-1"></div>
+                        <div class="card-deck">
+                            <div class="card">
+                                <a href="#"><img class="card-img-top" src="media/explore-1.jpg"></a>
+                                <div class="card-block">
+                                    <h1 class="card-text explore-episode">Inside the Episode</h1>
+                                    <p class="card-text explore-episode">Series creators D.B. Weiss and David Benioff examine Jaime's decision.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <a href="#"><img class="card-img-top" src="media/explore-2.jpg"></a>
+                                <div class="card-block">
+                                    <h1 class="card-text">World's Collide</h1>
+                                    <p class="card-text">The cast and crew take you inside the dragonpit.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <a href="#"><img class="card-img-top" src="media/explore-3.jpg"></a>
+                                <div class="card-block">
+                                    <h1 class="card-text">A Union of Ice and Fire</h1>
+                                    <p class="card-text">The cast discusses Jon and Daenerys' connection.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <a href="#"><img class="card-img-top" src="media/explore-4.jpg"></a>
+                                <div class="card-block">
+                                    <h1 class="card-text">Don't Miss a Moment</h1>
+                                    <p class="card-text">Stream every episode on HBO NOW.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-1"></div>
                 </section>
                 <section id="greyjoy" class="row img-span quote cinzel align-items-center">
@@ -95,55 +100,69 @@
                 <section class="people">
                     <div class="container">
                         <div class="cinzel">
-                        <h1>People</h1>
-                    </div>
-                        <div class="col-5">
-                            <div class="card">
-                                <img class="card-img-top" src="media/cersei.jpg" alt="Cersei Lannister">
-                                <div class="card-img-overlay">
-                                    <h1 id="cersei-h1" class="card-text">Cersei</h1>
-                                    <h2 id="cersei-h2" class="card-text">Lannister</h2>
+                            <h1>People</h1>
+                        </div>
+                        <div class="d-inline-block">
+                            <div class="col-5">
+                                <div class="card">
+                                    <img class="card-img-top" src="media/cersei.jpg" alt="Cersei Lannister">
+                                    <div class="card-img-overlay">
+                                        <h1 id="cersei-h1" class="card-text">Cersei</h1>
+                                        <h2 id="cersei-h2" class="card-text">Lannister</h2>
+                                        <p id="cersei-p" class="card-text">EXPLORE +</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="card-deck">
-                            <div class="col-3">
-                                <div class="card">
-                                    <img class="card-img-top" src="media/tyrion.jpg" alt="Tyrion Lannister">
-                                    <div class="card-block">
-                                        <h2 class="card-text">Tyrion</h2>
-                                        <h1 class="card-text">Lannister</h1>
-                                        <ul class="list-group">
-                                            <li class="list-group-item rounded-0">+</li>
-                                        </ul>
+                        <div class="d-inline-block">
+                            <div class="card-deck">
+                                <div class="col-3">
+                                    <div class="card">
+                                        <img class="card-img-top" src="media/tyrion.jpg" alt="Tyrion Lannister">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Tyrion</h2>
+                                            <h1 class="card-text">Lannister</h1>
+                                            <ul class="list-group">
+                                                <li class="list-group-item rounded-0">+</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="card">
-                                    <img class="card-img-top" src="media/euron.jpg" alt="Euron Greyjoy">
-                                    <div class="card-block">
-                                        <h2 class="card-text">Euron</h2>
-                                        <h1 class="card-text">Greyjoy</h1>
+                                <div class="col-3">
+                                    <div class="card">
+                                        <img class="card-img-top" src="media/euron.jpg" alt="Euron Greyjoy">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Euron</h2>
+                                            <h1 class="card-text">Greyjoy</h1>
+                                            <ul class="list-group">
+                                                <li class="list-group-item rounded-0">+</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="w-100"></div>
-                            <div class="col-3">
-                                <div class="card">
-                                    <img class="card-img-top" src="media/podrick.jpg" alt="Podrick Payne">
-                                    <div class="card-block">
-                                        <h2 class="card-text">Podrick</h2>
-                                        <h1 class="card-text">Payne</h1>
+                                <div class="w-100"></div>
+                                <div class="col-3">
+                                    <div class="card">
+                                        <img class="card-img-top" src="media/podrick.jpg" alt="Podrick Payne">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Podrick</h2>
+                                            <h1 class="card-text">Payne</h1>
+                                            <ul class="list-group">
+                                                <li class="list-group-item rounded-0">+</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="card">
-                                    <img class="card-img-top" src="media/yohn.jpg" alt="Yohn Royce">
-                                    <div class="card-block">
-                                        <h2 class="card-text">Yohn</h2>
-                                        <h1 class="card-text">Royce</h1>
+                                <div class="col-3">
+                                    <div class="card">
+                                        <img class="card-img-top" src="media/yohn.jpg" alt="Yohn Royce">
+                                        <div class="card-block">
+                                            <h2 class="card-text">Yohn</h2>
+                                            <h1 class="card-text">Royce</h1>
+                                            <ul class="list-group">
+                                                <li class="list-group-item rounded-0">+</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
