finally fixed the fkng people cards

--- a/index.html
+++ b/index.html
@@ -97,78 +97,73 @@
                     </div>
                 </section>
                 <!-- People Section -->
-                <section class="people">
-                    <div class="container">
-                        <div class="cinzel">
+                <section class="container" id="people-row">
+                    <section class="row">
+                        <div id="people-heading" class="row justify-content-start cinzel">
                             <h1>People</h1>
                         </div>
-                        <div class="d-inline-block">
-                            <div class="col-5">
-                                <div class="card">
-                                    <img class="card-img-top" src="media/cersei.jpg" alt="Cersei Lannister">
-                                    <div class="card-img-overlay">
-                                        <h1 id="cersei-h1" class="card-text">Cersei</h1>
-                                        <h2 id="cersei-h2" class="card-text">Lannister</h2>
-                                        <p id="cersei-p" class="card-text">EXPLORE +</p>
-                                    </div>
+                    </section>
+                    <section class="row">
+                        <div class="col-6">
+                            <div class="card">
+                                <img class="card-img-top" src="media/cersei.jpg" alt="Cersei Lannister">
+                                <div class="card-img-overlay h-100 d-flex flex-column justify-content-end">
+                                    <h1 id="cersei-h1" class="card-text">Cersei</h1>
+                                    <h2 id="cersei-h2" class="card-text">Lannister</h2>
+                                    <p id="cersei-p" class="card-text">EXPLORE +</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="d-inline-block">
-                            <div class="card-deck">
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img class="card-img-top" src="media/tyrion.jpg" alt="Tyrion Lannister">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Tyrion</h2>
-                                            <h1 class="card-text">Lannister</h1>
-                                            <ul class="list-group">
-                                                <li class="list-group-item rounded-0">+</li>
-                                            </ul>
+                        <div class="col-6">
+                            <article class="row">
+                                <div class="card-deck">
+                                    <div class="col-6">
+                                        <div class="card">
+                                            <img class="card-img-top" src="media/tyrion.jpg" alt="Tyrion Lannister">
+                                            <div class="card-block people-card">
+                                                <h2 class="card-title">Tyrion</h2>
+                                                <h1 class="card-subtitle">Lannister</h1>
+                                                <div class="btn plus">+</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="card">
+                                            <img class="card-img-top" src="media/euron.jpg" alt="Euron Greyjoy">
+                                            <div class="card-block people-card">
+                                                <h2 class="card-title">Euron</h2>
+                                                <h1 class="card-subtitle">Greyjoy</h1>
+                                                <div class="plus btn">+</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="w-100"></div>
+                                    <div class="col-6">
+                                        <div class="card">
+                                            <img class="card-img-top" src="media/podrick.jpg" alt="Podrick Payne">
+                                            <div class="card-block people-card">
+                                                <h2 class="card-title">Podrick</h2>
+                                                <h1 class="card-subtitle">Payne</h1>
+                                                <div class="plus btn">+</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="card">
+                                            <img class="card-img-top" src="media/yohn.jpg" alt="Yohn Royce">
+                                            <div class="card-block people-card">
+                                                <h2 class="card-title">Yohn</h2>
+                                                <h1 class="card-subtitle">Royce</h1>
+                                                <div class="plus btn">+</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img class="card-img-top" src="media/euron.jpg" alt="Euron Greyjoy">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Euron</h2>
-                                            <h1 class="card-text">Greyjoy</h1>
-                                            <ul class="list-group">
-                                                <li class="list-group-item rounded-0">+</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="w-100"></div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img class="card-img-top" src="media/podrick.jpg" alt="Podrick Payne">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Podrick</h2>
-                                            <h1 class="card-text">Payne</h1>
-                                            <ul class="list-group">
-                                                <li class="list-group-item rounded-0">+</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img class="card-img-top" src="media/yohn.jpg" alt="Yohn Royce">
-                                        <div class="card-block">
-                                            <h2 class="card-text">Yohn</h2>
-                                            <h1 class="card-text">Royce</h1>
-                                            <ul class="list-group">
-                                                <li class="list-group-item rounded-0">+</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            </article>
                         </div>
-                    </div>
+                    </section>
                 </section>
+                <!--JON SNOW QUOTE-->
                 <section id="jon" class="row img-span quote cinzel align-items-center">
                     <div class="col-4 offset-1">
                         <q>"There is only one war that matters: The great war. And it is here."</q>
